@@ -3,6 +3,8 @@ extern void owl_aim_init(void);
 extern int owl_aim_login(char *screenname, char *password);
 extern void owl_aim_logout(void);
 extern int owl_aim_send_im(char *to, char *msg);
+extern void owl_aim_addbuddy(char *screenname);
+extern void owl_aim_delbuddy(char *screenname);
 extern void owl_aim_chat_join(char *chatroom);
 extern void owl_aim_chat_leave(char *chatroom);
 extern int owl_aim_chat_sendmsg(char *chatroom, char *msg);
@@ -56,6 +58,8 @@ extern char *owl_command_alist();
 extern char *owl_command_blist();
 extern void owl_command_about();
 extern void owl_command_version();
+extern char *owl_command_addbuddy(int argc, char **argv, char *buff);
+extern char *owl_command_delbuddy(int argc, char **argv, char *buff);
 extern char *owl_command_dump(int argc, char **argv, char *buff);
 extern char *owl_command_next(int argc, char **argv, char *buff);
 extern char *owl_command_prev(int argc, char **argv, char *buff);
